--- a/booking_flight/package.json
+++ b/booking_flight/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "flatpickr": "^4.6.13",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "pg": "^8.11.5",
     "react": "^18",
     "react-calendar": "^5.0.0",
@@ -18,6 +20,7 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
