--- a/booking_flight/package.json
+++ b/booking_flight/package.json
@@ -13,6 +13,7 @@
     "flatpickr": "^4.6.13",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "nextjs-progressbar": "^0.0.16",
     "pg": "^8.11.5",
     "react": "^18",
     "react-calendar": "^5.0.0",
